--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.4-Beta2 
	- Fixed typo that caused mail to always mail to everyone. 
	- Fixed an issue with user auth in XML API always registering as
		system (Thx purdyk)
	- Fixed issue with Update All and multiple catalogs not correctly
		reseting changed album set
	- Added ability to filter disabled songs from duplicate check on 
		by default (Thx joh6nn) 
	- Added new rating images (Thx greengeek)
	- Added check for old database versions, prevent upgrade if too old
	- Fixed issue with user creation (Thx yoog)
	- Fixed Now Playing refresh
	- Fixed single song update (Thx alex2008)
	- Added Checkbox for All Playlists filter (Admin Only) also made
		filters only appear when its logical for them to be there
	- Fixed filtering of Private Playlists and fixed editing of type
		of playlist. Default is still public on creation. 
	- Fixed erronous fseek() when downsampling. 
	- Fixed search by stars so that it returns the correct results 
		(Thx alex2008)
	- Fixed issue where random didn't end correctly when no results found
	- Fixed mime type never being updated on verify and added language
		and lyrics to gather from id3v2
	- Implemented a semi-working write_tags.inc script limited by getid3()
		support (Thx tomatopi)
	- Added limit option to the XML API
	- Fixed an issue where inline song editing wouldn't update the song 
		title (Thx profner)
	- Fixed conf error on registration confirmation and made it
		aware of greylisting
	- Fixed Admin Preference Level updates
	- Fixed incorrect command for skip to on HttpQ (Thx usaf_pride)
	- Fixed problem with gif and png resize
	- Fixed problem where democratic play wouldn't send to localplay
		and would just display a blank screen